cabal-version:      2.4
name:               packed-memory-quadtree
version:            0.1.0.0
synopsis:           Purely Functional Packed-Memory QuadTree with Batch Inserts and Range Queries
category:           Data
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nikolai Kudasov, Artem Murashko
maintainer:         n.kudasov@innopolis.ru, artmurashko@yandex.ru
copyright:          2023-2024 Innopolis University
--extra-source-files: CHANGELOG.md

common common-all
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import:           common-all
    exposed-modules:  
        Data.PackedMemoryArray
        Data.PackedMemoryArrayMap
        Data.PackedMemoryQuadtree
    build-depends:    
        base ^>=4.17.2.0,
        containers,
        primitive,
        vector,
        random,
        QuickCheck
    hs-source-dirs:   src

executable packed-memory-quadtree
    import:           common-all
    main-is:          Main.hs
    other-modules:    
        Data.PackedMemoryArray
        Data.PackedMemoryArrayMap
        Data.PackedMemoryQuadtree
    build-depends:      
        base ^>=4.17.2.0,
        containers,
        packed-memory-quadtree,
        primitive,
        vector,
        random,
        QuickCheck
    hs-source-dirs:   app, src

-- test-suite tests
--     type: exitcode-stdio-1.0
--     main-is: Main.hs
    -- other-modules:    
    --     Data.PackedMemoryQuadtree
    -- build-depends: 
    --     base ^>=4.17.2.0, 
--         HUnit,
--         QuickCheck
--     hs-source-dirs: tests
--     default-language: Haskell2010

benchmark benches
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             PMQBenchmark.hs
--   other-modules:    
--         Data.PackedMemoryQuadtree
  build-depends:       
    base ^>=4.17.2.0, 
    criterion,
    random,
    packed-memory-quadtree,
  default-language:    Haskell2010