cabal-version: 2.4
name:          packed-memory-quadtree
version:       0.1.0.0
category:      Data
license:       BSD-3-Clause
license-file:  LICENSE
author:        Nikolai Kudasov, Artem Murashko
maintainer:    n.kudasov@innopolis.ru, artmurashko@yandex.ru
copyright:     2023-2024 Innopolis University
synopsis:
  Purely Functional Packed-Memory QuadTree with Range Queries

flag threaded
  default: True
  manual:  True

library
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules:
    Data.PackedMemoryArray
    Data.PackedMemoryArrayMap
    Data.PackedMemoryQuadtree
    Data.QuadtreeDataMap

  build-depends:
      base
    , containers
    , primitive
    , QuickCheck
    , random
    , vector

executable packed-memory-quadtree
  hs-source-dirs: app src
  main-is:        Main.hs
  ghc-options:    -Wall

  if flag(threaded)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  other-modules:
    Data.PackedMemoryArray
    Data.PackedMemoryArrayMap
    Data.PackedMemoryQuadtree
    Data.QuadtreeDataMap

  build-depends:
      base
    , containers
    , packed-memory-quadtree
    , primitive
    , QuickCheck
    , random
    , vector
    -- , structures
    -- , QuadTree
    -- , spacepart
    -- , data-r-tree

benchmark rangelookup
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        rangelookup.hs
  ghc-options:    -Wall

  if flag(threaded)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base
    , containers
    , criterion
    , packed-memory-quadtree
    , random
