cabal-version:      2.4
name:               packed-memory-quadtree
version:            0.1.0.0
synopsis:           Purely Functional Packed-Memory QuadTree with Batch Inserts and Range Queries
category:           Data
license:            BSD3
license-file:       LICENSE
author:             Nikolai Kudasov, Artem Murashko
maintainer:         n.kudasov@innopolis.ru, artmurashko@yandex.ru
copyright:          2023-2024 Innopolis University
--extra-source-files: CHANGELOG.md

executable packed-memory-quadtree
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
